<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:background="#F2F4F3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/highlight"
            android:layout_width="match_parent"
            android:layout_height="212dp"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/megalo_box"/>
            <View
                android:id="@+id/rectangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/highlight_gradient" />

            <TextView
                android:id="@+id/highlight_album_title"
                android:layout_width="288dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="36dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="150dp"
                android:text="@string/highlight_album_title"
                android:textAppearance="@style/highlight_album_title" />

            <TextView
                android:id="@+id/from_album_"
                android:layout_width="145dp"
                android:layout_height="17dp"
                android:layout_below="@+id/highlight_album_title"
                android:layout_marginLeft="36dp"
                android:text="@string/highlight_from"
                android:textAppearance="@style/highlight_from" />
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/home_newest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/highlight"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#FFFFFF"
            android:elevation="4dp">

            <TextView
                android:id="@+id/group1_title"
                android:layout_width="75dp"
                android:layout_height="22dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/group1_title"
                android:textAppearance="@style/group_title"
                />

            <GridView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/group1_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/group1_title"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#FFFFFF"
                android:numColumns="3" />
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/home_best"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/home_newest"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#FFFFFF"
            android:elevation="4dp">

            <TextView
                android:id="@+id/group2_title"
                android:layout_width="75dp"
                android:layout_height="22dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/group2_title"
                android:textAppearance="@style/group_title"
                />
            <GridView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:numColumns="3"
                android:id="@+id/group2_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_below="@+id/group2_title"
                android:background="#FFFFFF"/>
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/home_random"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/home_best"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#FFFFFF"
            android:elevation="4dp">

            <TextView
                android:id="@+id/group3_title"
                android:layout_width="75dp"
                android:layout_height="22dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/group3_title"
                android:textAppearance="@style/group_title"
                />
            <GridView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:numColumns="3"
                android:id="@+id/group3_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_below="@+id/group3_title"
                android:background="#FFFFFF"/>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>